[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "mnemosyne-memory"
version = "0.1.0"
description = "Multi-layer persistent memory for LangGraph and LangChain agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["mnemosyne"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
