[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "mnemosyne-memory"
version = "0.1.0"
description = "Multi-layer persistent memory for LangGraph and LangChain agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Yuvraj Srivastava", email = "yuvrajstark2512@gmail.com" }
]
keywords = ["llm", "agents", "memory", "langgraph", "langchain", "chromadb", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "openai>=1.30.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
langgraph = [
    "langgraph>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/Yuvrajys2512/Mnemosyne"
Repository = "https://github.com/Yuvrajys2512/Mnemosyne"
Issues = "https://github.com/Yuvrajys2512/Mnemosyne/issues"

[tool.hatch.build.targets.wheel]
packages = ["mnemosyne"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
